--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,125 @@
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  box-sizing: border-box;
+}
 
+body {
+  margin: 0px;
+  font-family: "Be Vietnam Pro", sans-serif;
+}
+
+.header {
+  background-color: #1E293A;
+  padding: 15px 16px;
+}
+.header__wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 15px;
+}
+.header__left {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+.header__button-sider {
+  background-color: transparent;
+  font-size: 24px;
+  color: #2275FC;
+  border: 0;
+  padding: 0px;
+  margin: 0px;
+}
+.header__search {
+  flex: 1;
+  padding: 10px 22px;
+  border: 1px solid #94A3B8;
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+  gap: 10px;
+}
+.header__search input {
+  background-color: transparent;
+  font-size: 14px;
+  flex: 1;
+  border: 0px;
+  outline: 0;
+}
+.header__search button {
+  background-color: transparent;
+  color: #94A3B8;
+  font-size: 20px;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+}
+.header__right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+.header__buttons ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.header__buttons ul li span {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #303B4C;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  font-size: 20px;
+  color: #94a3b8;
+}
+.header__user {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+.header__user-avatar {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.header__user-avatar img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.header__user-title {
+  display: flex;
+  flex-direction: column;
+}
+.header__user-title h3 {
+  margin: 0px;
+  color: #94A3B8;
+  font-size: 14px;
+  font-weight: 700;
+}
+.header__user-title span {
+  color: #8B8E95;
+  font-size: 12px;
+}
+.header__setting {
+  background-color: transparent;
+  color: #94A3B8;
+  font-size: 24px;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+}
 
 /*# sourceMappingURL=style.css.map */
