--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -30,6 +30,28 @@ body {
         gap: 30px;
     }
 
+    &__logo {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        text-decoration: none;
+    }
+
+    &__logo-image {
+        width: 50px;
+        height: 50px;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    &__logo-title {
+        color: #FDFDFD;
+        font-size: 36px;
+        font-weight: 700;
+    }
+
     &__button-sider {
         background-color: transparent;
         font-size: 24px;
@@ -37,6 +59,7 @@ body {
         border: 0;
         padding: 0px;
         margin: 0px;
+        cursor: pointer;
     }
 
     &__search {
@@ -50,6 +73,7 @@ body {
 
         input {
             background-color: transparent;
+            color: $color-text-light;
             font-size: 14px;
             flex: 1;
             border: 0px;
@@ -63,6 +87,7 @@ body {
             border: 0px;
             padding: 0px;
             margin: 0px;
+            cursor: pointer;
         }
     }
 
@@ -95,6 +120,7 @@ body {
                     border-radius: 50%;
                     font-size: 20px;
                     color: #94a3b8;
+                    cursor: pointer;
                 }
                 
             }
@@ -105,6 +131,7 @@ body {
         display: flex;
         align-items: center;
         gap: 12px;
+        cursor: pointer;
     }
 
     &__user-avatar {
@@ -144,6 +171,6 @@ body {
         border: 0px;
         padding: 0px;
         margin: 0px;
-
+        cursor: pointer;
     }
 }
