--- a/template/partials/header.pug
+++ b/template/partials/header.pug
@@ -2,10 +2,10 @@ header(class="header")
     div(class="header__wrap")
         div(class="header__left")
             //- logo
-            //- a(href="#" class="header__logo")
-            //-     div(class="header__logo-image")
-            //-         img(src="https://cdn-icons-png.flaticon.com/512/714/714032.png")
-            //-     div(class="header__logo-title") Eagle
+            a(href="#" class="header__logo")
+                div(class="header__logo-image")
+                    img(src="https://cdn-icons-png.flaticon.com/512/714/714032.png")
+                div(class="header__logo-title") Eagle
             //- menu sider
             button(class="header__button-sider")
                 i(class="fa-solid fa-bars")
