--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,17 @@ body {
 }
 .header__left {
   width: 50%;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: space-between;
   gap: 30px;
 }
 .header__logo {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   gap: 10px;
   text-decoration: none;
+  width: 205px;
 }
 .header__logo-image {
   width: 50px;
@@ -144,6 +145,73 @@ body {
   padding: 0px;
   margin: 0px;
   cursor: pointer;
+}
+
+.sider {
+  background-color: #1E293A;
+  border-top: 0.5px solid #f2f7fb;
+  width: 280px;
+  height: 670px;
+}
+.sider__wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+.sider__menu {
+  margin-bottom: 20px;
+}
+.sider__menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.sider__menu ul li {
+  padding: 14px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+.sider__menu ul li a {
+  text-decoration: none;
+  color: #FDFDFD;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.sider__menu ul li a:hover {
+  color: #2275FC;
+  transition: color 1s;
+}
+.sider__menu ul li a:hover i {
+  color: #2275FC;
+  transition: color 1s;
+}
+.sider__menu ul li a i {
+  color: #bdcfd3;
+  font-size: 18px;
+}
+.sider__menu ul li::after {
+  content: "\f107";
+  line-height: 1;
+  font-weight: 900;
+  font-family: "Font Awesome 6 Free";
+  color: #bdcfd3;
+}
+.sider__menu-title {
+  color: #bdcfd3;
+  font-size: 12px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  padding-left: 14px;
 }
 
 /*# sourceMappingURL=style.css.map */
