--- a/layouts/default.html
+++ b/layouts/default.html
@@ -37,7 +37,7 @@
         </div>
       </div>
     </header>
-    <div class="main"> 
+    <div class="body"> 
       <nav class="sider">
         <div class="sider__wrap">
           <div class="sider__menu">
@@ -63,6 +63,8 @@
           </div>
         </div>
       </nav>
+      <div class="main">
+      </div>
     </div>
   </body>
 </html>
