--- a/template/layouts/default.pug
+++ b/template/layouts/default.pug
@@ -20,48 +20,15 @@ html(lang="en")
         include ../partials/header
         //- end header
 
-        .main 
+        .body 
             //- sider
-            nav(class="sider")
-                div(class="sider__wrap")
-                    //- main 
-                    div(class="sider__menu")
-                        div(class="sider__menu-title") MAIN HOME 
-                        ul
-                            li 
-                                a(href="#" class="")
-                                    i(class="fa-brands fa-windows")
-                                    |   Dashboard
-                    //- page
-                    div(class="sider__menu")
-                        div(class="sider__menu-title") ALL PAGE 
-                        ul 
-                            li
-                                a(href="#" class)
-                                    i(class="fa-solid fa-cart-shopping")
-                                    |   Product
-                                    
-                            li
-                                a(href="#" class)
-                                    i(class="fa-solid fa-layer-group")
-                                    |   Category
-                            li
-                                a(href="#" class)
-                                    i(class="fa-regular fa-user")
-                                    |   User
-                            li
-                                a(href="#" class)
-                                    i(class="fa-solid fa-user-plus")
-                                    |   Roles
-                    //- setting
-                    div(class="sider__menu")
-                        div(class="sider__menu-title") SETTING 
-                        ul 
-                            li
-                                a(href="#" class)
-                                    i(class="fa-solid fa-gear")
-                                    |   Setting 
+            include ../partials/sider
             //- end sider
+
+            //- main content
+            .main
+                block main
+            //- end main content
 
 
         
