--- a/template/products.pug
+++ b/template/products.pug
@@ -14,8 +14,8 @@ block main
         var breadcrumbArray = 
         [
             "Dashboard",
-            "Sản phẩm",
-            "Danh sách sản phẩm"
+            "Product",
+            "Product List"
         ]
         
     +box-head-use-breadcrumb("DANH SÁCH SẢN PHẨM", breadcrumbArray)
