--- a/template/partials/sider.pug
+++ b/template/partials/sider.pug
@@ -15,20 +15,20 @@ nav(class="sider")
                 li
                     a(href="#" class)
                         i(class="fa-solid fa-cart-shopping")
-                        |   Product
+                        |   Sản Phẩm
                         
                 li
                     a(href="#" class)
                         i(class="fa-solid fa-layer-group")
-                        |   Category
+                        |   Danh Mục
                 li
                     a(href="#" class)
                         i(class="fa-regular fa-user")
-                        |   User
+                        |   Tài khoản
                 li
                     a(href="#" class)
                         i(class="fa-solid fa-user-plus")
-                        |   Roles
+                        |   Nhóm Quyền
         //- setting
         div(class="sider__menu")
             div(class="sider__menu-title") SETTING 
@@ -36,4 +36,4 @@ nav(class="sider")
                 li
                     a(href="#" class)
                         i(class="fa-solid fa-gear")
-                        |   Setting 
+                        |   Cài đặt 
