--- a/layouts/default.html
+++ b/layouts/default.html
@@ -49,16 +49,16 @@
           <div class="sider__menu">
             <div class="sider__menu-title">ALL PAGE </div>
             <ul> 
-              <li><a class="true" href="#"><i class="fa-solid fa-cart-shopping"></i>  Product</a></li>
-              <li><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Category</a></li>
-              <li><a class="true" href="#"><i class="fa-regular fa-user"></i>  User</a></li>
-              <li><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Roles</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-cart-shopping"></i>  Sản Phẩm</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-layer-group"></i>  Danh Mục</a></li>
+              <li><a class="true" href="#"><i class="fa-regular fa-user"></i>  Tài khoản</a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-user-plus"></i>  Nhóm Quyền</a></li>
             </ul>
           </div>
           <div class="sider__menu">
             <div class="sider__menu-title">SETTING </div>
             <ul> 
-              <li><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Setting </a></li>
+              <li><a class="true" href="#"><i class="fa-solid fa-gear"></i>  Cài đặt </a></li>
             </ul>
           </div>
         </div>
