--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,7 +280,11 @@ body {
 
 .table {
   border-collapse: collapse;
+  border-spacing: 0;
   width: 100%;
+}
+.table tr {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1411764706);
 }
 .table th, .table td {
   padding: 14px;
@@ -292,10 +296,13 @@ body {
 }
 .table__head {
   background-color: #212D3F;
-  overflow: hidden;
 }
 .table__body tr:nth-child(2n) {
   background-color: #212D3F;
+}
+.table__body tr:hover {
+  background-color: #3E4757;
+  transition: 0.5s background-color;
 }
 .table__title {
   display: inline-flex;
@@ -303,13 +310,18 @@ body {
   gap: 20px;
 }
 .table__title img {
-  width: 50px;
-  height: 60px;
+  width: 40px;
+  height: 50px;
   object-fit: cover;
 }
 .table__title h3 {
   margin: 0px;
   font-size: 14px;
+}
+.table__title h3:hover {
+  color: #2275FC;
+  transition: 0.5s color;
+  cursor: pointer;
 }
 
 .badge {
@@ -325,6 +337,47 @@ body {
 .badge--inactive {
   background-color: #432F25;
   color: #ED401B;
+}
+
+.card {
+  background-color: #1E293B;
+  padding: 24px;
+  border-radius: 12px;
+}
+.card__footer {
+  padding-top: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.pagination {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 9px;
+}
+.pagination__item {
+  text-decoration: none;
+  background-color: transparent;
+  color: #94A3B8;
+  font-size: 14px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination__item--active, .pagination__item:hover {
+  background-color: #2275FC;
+  color: white;
+}
+.pagination__item-icon {
+  border: 1px solid #283548;
 }
 
 /*# sourceMappingURL=style.css.map */
