--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -359,8 +359,12 @@ body {
 // table
 .table {
     border-collapse: collapse;
+    border-spacing: 0;
     width: 100%;
-    // border: 1px solid #bdcfd3;
+
+    tr {
+        border-bottom: 1px solid #ffffff24;
+    }
 
     th, td {
         padding: 14px; // xây table thì luôn có mới đẹp hihi
@@ -373,13 +377,17 @@ body {
 
     &__head {
         background-color: #212D3F;
-        overflow: hidden;
     }
 
     &__body {
         tr {
             &:nth-child(2n) {
                 background-color: #212D3F;
+            }
+
+            &:hover {
+                background-color: #3E4757;
+                transition: 0.5s background-color;
             }
         }
     }
@@ -390,14 +398,20 @@ body {
         gap: 20px;
 
         img {
-            width: 50px;
-            height: 60px;
+            width: 40px;
+            height: 50px;
             object-fit: cover;
         }
 
         h3 {
             margin: 0px;    // reset h3 html
             font-size: 14px;
+
+            &:hover {
+                color: #2275FC;
+                transition: 0.5s color;
+                cursor: pointer;
+            }
         }
     }
 }
@@ -421,3 +435,55 @@ body {
     }
 }
 // end badge
+
+// card
+.card {
+    background-color: #1E293B;
+    padding: 24px;
+    border-radius: 12px;
+
+    &__footer {
+        padding-top: 30px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+// end card
+
+
+// pagination
+.pagination {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 9px;
+
+    &__item {
+        text-decoration: none;
+        background-color: transparent;
+        color: $color-text-light;
+        font-size: 14px;
+
+        border: 1px solid transparent;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+
+        &--active,  &:hover {
+            background-color: #2275FC;
+            color: white;
+        }
+    }
+
+    &__item-icon {
+        border: 1px solid #283548;
+    }
+}
+// end pagination
