--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   box-sizing: border-box;
@@ -329,6 +330,7 @@ body {
   border-radius: 8px;
   font-size: 12px;
   font-weight: 500;
+  cursor: pointer;
 }
 .badge--active {
   background-color: #2A4432;
@@ -343,6 +345,22 @@ body {
   background-color: #1E293B;
   padding: 24px;
   border-radius: 12px;
+}
+.card__head {
+  padding-bottom: 30px;
+}
+.card__head-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+}
+.card__head-left {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  width: 500px;
 }
 .card__footer {
   padding-top: 30px;
@@ -378,6 +396,91 @@ body {
 }
 .pagination__item-icon {
   border: 1px solid #283548;
+}
+
+.filter__icon {
+  color: #94A3B8;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.button {
+  padding: 15px 22px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 12px;
+}
+.button__fill {
+  background-color: #2275FC;
+  color: white;
+}
+.button__fill:hover {
+  background-color: #2166D6;
+}
+.button__outline {
+  background-color: white;
+  color: #2275FC;
+}
+.button__outline:hover {
+  background-color: #2275FC;
+  color: white;
+}
+
+.checkbox {
+  appearance: none;
+  position: relative;
+  width: 1em;
+  height: 1em;
+  border: 1px solid gray;
+  /* Adjusts the position of the checkboxes on the text baseline */
+  vertical-align: -2px;
+  /* Set here so that Windows' High-Contrast Mode can override */
+  color: green;
+}
+.checkbox::before {
+  content: "✔";
+  position: absolute;
+  font-size: 1.2em;
+  right: -1px;
+  top: -0.3em;
+  visibility: hidden;
+  color: white;
+}
+.checkbox:checked::before {
+  /* Use `visibility` instead of `display` to avoid recalculating layout */
+  visibility: visible;
+}
+.checkbox:disabled {
+  border-color: black;
+  background: #ddd;
+  color: gray;
+}
+
+.form__search {
+  flex: 1;
+  padding: 10px 22px;
+  border: 1px solid #94A3B8;
+  border-radius: 8px;
+  overflow: hidden;
+  display: flex;
+  gap: 10px;
+}
+.form__search input {
+  background-color: transparent;
+  color: #94A3B8;
+  font-size: 14px;
+  flex: 1;
+  border: 0px;
+  outline: 0;
+}
+.form__search button {
+  background-color: transparent;
+  color: #94A3B8;
+  font-size: 20px;
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
