--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -522,6 +522,7 @@ body {
     padding: 15px 22px;
     font-size: 14px;
     font-weight: 700;
+    border: 0px;
     border-radius: 12px;
 
     &__fill {
@@ -530,6 +531,7 @@ body {
         
         &:hover {
             background-color: #2166D6;
+            transition: 0.5s background-color;
         }
     }
 
@@ -540,6 +542,7 @@ body {
         &:hover {
             background-color: #2275FC;
             color: white;
+            transition: 0.8s background-color;
         }
     }
 }
@@ -612,5 +615,103 @@ body {
             cursor: pointer;
         }
     }
+
+    &__create {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        gap: 24px;
+    }
+
+    &__left {
+        width: calc((100% / 2) - 12px);
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    &__right {
+        width: calc((100% / 2) - 12px);
+        // display: flex;
+        // flex-direction: column;
+        // gap: 24px;
+    }
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+
+        input[type="text"], textarea {
+            background-color: transparent;
+            color: $color-text-light;
+            font-size: 14px;
+            flex: 1;
+            border: 1px solid $color-input;
+            border-radius: 12px;
+            outline: 0;
+            padding: 14px 22px;   
+        }
+    }
+
+    &__submit {
+        width: 220px;
+        button {
+            width: 100%;
+            border-radius: 16px;
+        }
+    }
 }
 // end form
+
+// upload image
+.upload-image {
+    display: flex;
+    justify-content: space-between;
+    gap:10px;
+    height: 250px;
+    margin-bottom: 12px;
+    &__item {
+        border: 1px dashed #2166D6;
+        border-radius: 12px;
+        padding: 16px 22px;
+        cursor: pointer;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        i {
+            color: $color-text-light;
+            font-size: 24px;
+        }
+
+        label {
+            color: $color-text-light;
+            font-size: 12px;
+        }
+        input[type="file"] {
+            display: none;
+        }
+    }
+}
+// end upload image
+
+// label
+.label {
+    color: $color-text-light;
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+
+    &__desc {
+        color: white;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 1.8;
+        text-transform: none;
+    }
+}
+// end label
