--- a/template/mixins/form.pug
+++ b/template/mixins/form.pug
@@ -6,3 +6,6 @@ mixin form-search
         input(type="text" placeholder="Search here..." class="")
         button(type="submit" class="")
             i(class="fa-solid fa-magnifying-glass")
+
+
+//- mixin form-create
