--- a/template/products.pug
+++ b/template/products.pug
@@ -79,7 +79,7 @@ block main
                     //- add product
                     div(class="button button__outline")
                         <i class="fa-solid fa-plus"></i>
-                        |   THÊM MỚI
+                        |   Thêm Mới
                
 
         div(class="card__body")
