--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ body {
   background-color: #1E293A;
   border-top: 0.5px solid #283548;
   width: 18%;
-  height: 670px;
+  height: auto;
 }
 .sider__wrap {
   display: flex;
@@ -491,14 +491,11 @@ body {
   justify-content: flex-end;
   gap: 24px;
 }
-.form__left {
+.form__left, .form__right {
   width: calc(50% - 12px);
   display: flex;
   flex-direction: column;
   gap: 24px;
-}
-.form__right {
-  width: calc(50% - 12px);
 }
 .form__item {
   display: flex;
@@ -513,6 +510,17 @@ body {
   border-radius: 12px;
   outline: 0;
   padding: 14px 22px;
+}
+.form__item-radio {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.form__item-radio label {
+  color: #94A3B8;
+  font-size: 14px;
+  text-transform: capitalize;
 }
 .form__submit {
   width: 220px;
