--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -624,6 +624,13 @@ body {
         gap: 24px;
     }
 
+    &__normal {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
     &__left, &__right {
         width: calc((100% / 2) - 12px);
         display: flex;
@@ -677,6 +684,7 @@ body {
     gap:10px;
     height: 250px;
     margin-bottom: 12px;
+
     &__item {
         border: 1px dashed #2166D6;
         border-radius: 12px;
