trang danh sachs nhom quyen

--- a/template/account-edit.pug
+++ b/template/account-edit.pug
@@ -7,7 +7,7 @@ include mixins/form
 
 //- Title
 block title 
-    title Thêm Mới Tài Khoản
+    title Chỉnh Sửa Tài Khoản
 
 //- Mai Title
 block main
