--- a/template/products.pug
+++ b/template/products.pug
@@ -65,13 +65,19 @@ block main
     div(class="card")
         div(class="card__head")
             div(class="card__head-wrap")
+                //- filter
+                div(class="filter")
+                    span(class="filter__title") 
+                        <i class="fa-solid fa-filter"></i>
+                        |   Bộ lọc tìm kiếm
+                    div(class="filter__list")
+                        span(class="filter__list-item") Tất cả
+                        span(class="filter__list-item") Hoạt động
+                        span(class="filter__list-item") Dừng hoạt động
+                        span(class="filter__list-item")
+                            <i class="fa-solid fa-rotate-right"></i>
                 //- left    
                 div(class="card__head-left")
-                    //- filter
-                    div(class="filter")
-                        //- icon filter
-                        div(class="filter__icon")
-                            <i class="fa-solid fa-sliders"></i>
                     //- form search
                     +form-search
                 //- right
